@@ -24,7 +24,6 @@ from bzrlib import (
     osutils,
     tests,
     )
-from bzrlib.workingtree_4 import WorkingTreeFormat4
 from bzrlib.tests.workingtree_implementations import TestCaseWithWorkingTree
 
 
